# retro-engine

./: .clang-format  .csharpierignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Directory.Packages.props  LICENSE  RetroEngine.Managed.sln  RetroEngine.Managed.sln.DotSettings  RetroEngine.Managed.slnx  format_all.py  global.json  pyproject.toml  requirements.txt  retro_engine.natvis  run_clang_format.py  update_headers.py  vcpkg.json
engine/: CMakeLists.txt  Directory.Build.props
engine/core/: CMakeLists.txt
engine/core/public/src/: c_api.ixx  localization.ixx
engine/core/src/: algorithm.ixx  basic_types.ixx  c_api.ixx  casts.ixx  concepts.ixx  core.ixx  defines.ixx  di.ixx  exceptions.ixx  index.ixx  math.ixx  type_traits.ixx
engine/core/src/algorithm/: hashing.ixx  index.ixx
engine/core/src/async/: async.cpp  async.ixx  task.ixx  task_scheduler.cpp  task_scheduler.ixx
engine/core/src/binds/: binds_manager.cpp  binds_manager.ixx  exported_function.cpp  exported_function.ixx  index.ixx
engine/core/src/containers/: index.ixx  inline_list.ixx  node_list.ixx  optional.ixx  packed_pool.ixx  polymorphic.ixx
engine/core/src/di/: di.cpp  di.ixx  metadata.ixx  scoped_service_provider.cpp  scoped_service_provider.ixx  service_call_site.ixx  service_collection.cpp  service_collection.ixx  service_identifier.ixx  service_instance.ixx  service_provider.cpp  service_provider.ixx  service_registration.ixx  service_scope.ixx
engine/core/src/filesystem/: file_loader.cpp  file_loader.ixx  filesystem.cpp  index.ixx
engine/core/src/functional/: delegate.ixx  function_traits.ixx  functional.cpp  functional.ixx  index.ixx  overload.ixx
engine/core/src/interop/: index.ixx  name_exporter.cpp  name_exporter.ixx  registration.cpp
engine/core/src/io/: buffered_stream.cpp  buffered_stream.ixx  file_stream.cpp  file_stream.ixx  filesystem.ixx  io.cpp  io.ixx  stream.cpp  stream.ixx
engine/core/src/math/: concepts.ixx  index.ixx  matrix.ixx  operations.ixx  rect.ixx  rounding.ixx  transform.ixx  vector.ixx
engine/core/src/memory/: align.ixx  alignment.ixx  arena.ixx  arena_allocator.ixx  fixed_buffer_allocator.ixx  index.ixx  memory.ixx  optimization.ixx  ref_counted_ptr.ixx  simple_allocator.ixx  simple_arena.ixx  small_unique_ptr.ixx  write_to_buffer.ixx
engine/core/src/platform/: io.cpp  io.ixx  platform.cpp  platform.ixx
engine/core/src/strings/: comparison.ixx  concepts.ixx  cstring_view.ixx  encoding.ixx  fmt.ixx  index.ixx  literals.ixx  name.cpp  name.ixx  name_c.cpp  strings.ixx  uni_algo.ixx
engine/core/src/type_traits/: basic.ixx  callable.ixx  pointer.ixx  range.ixx  variant.ixx
engine/core/src/util/: noncopyable.ixx
engine/core/test/: CMakeLists.txt  gtest_helpers.hpp  test_helpers.h
engine/core/test/async/: test_tasks.cpp
engine/core/test/containers/: test_optional.cpp
engine/core/test/functional/: test_delegates.cpp
engine/core/test/math/: test_vector.cpp
engine/core/test/memory/: test_ref_counted_ptr.cpp  test_small_unique_ptr.cpp
engine/core/test/strings/: test_name.cpp
engine/interop/: CMakeLists.txt
engine/interop/src/: index.ixx
engine/logging/: CMakeLists.txt
engine/logging/private/src/: logger_c.cpp
engine/logging/src/: index.ixx  level.ixx  log_level.ixx  logger.cpp  logger.ixx  logger_c.cpp  logging.cpp  logging.ixx  record.ixx  spdlog.ixx
engine/logging/src/interop/: index.ixx  log_exporter.cpp  log_exporter.ixx  registration.cpp
engine/platform/: CMakeLists.txt
engine/platform/private/src/: backend.cpp
engine/platform/public/src/: event.ixx  exceptions.ixx
engine/platform/src/: backend.cpp  backend.ixx  context.ixx  display.cpp  display.ixx  dll.ixx  event.ixx  events.ixx  exceptions.ixx  exports.h  index.ixx  platform.cpp  platform.ixx  sdl.cpp  sdl.ixx  window.cpp  window.ixx
engine/platform/src/backend/: sdl.ixx
engine/platform/src/filesystem/: filesystem.cpp  filesystem.ixx  index.ixx  utils.cpp  utils.ixx
engine/platform/src/loading/: index.ixx  loading.ixx  shared_library.cpp  shared_library.ixx
engine/renderer/: CMakeLists.txt
engine/renderer/public/src/: services.ixx
engine/renderer/resources/: fullscreen_quad.vert  geometry.frag  geometry.vert  solid_color.frag  sprite.frag  sprite.vert
engine/renderer/resources/common/: camera.glsl  depth.glsl
engine/renderer/src/: game_window.ixx  index.ixx  render_data.ixx  renderer.cpp  renderer.ixx  services.cpp  services.ixx  vulkan_buffer_manager.cpp  vulkan_buffer_manager.ixx  vulkan_renderer2d.cpp  vulkan_renderer2d.ixx  vulkan_viewport.ixx  window.cpp  window.ixx
engine/renderer/src/components/: buffer_manager.cpp  buffer_manager.ixx  command_pool.cpp  command_pool.ixx  components.cpp  components.ixx  device.cpp  device.ixx  index.ixx  pipeline.cpp  pipeline.ixx  swapchain.cpp  swapchain.ixx  sync.cpp  sync.ixx  vulkan_command_pool.cpp  vulkan_command_pool.ixx  vulkan_device.cpp  vulkan_device.ixx  vulkan_framebuffers.cpp  vulkan_framebuffers.ixx  vulkan_instance.ixx  vulkan_render_pass.cpp  vulkan_render_pass.ixx  vulkan_surface.ixx  vulkan_swapchain.cpp  vulkan_swapchain.ixx  vulkan_sync.cpp  vulkan_sync.ixx
engine/renderer/src/data/: texture_render_data.ixx
engine/renderer/src/instances/: index.ixx  quad.cpp  quad.ixx  quad_c.cpp  registrations.cpp
engine/renderer/src/pipeline/: index.ixx  pipeline.cpp  pipeline.ixx  pipeline_manager.cpp  pipeline_manager.ixx  pipeline_registry.cpp  pipeline_registry.ixx  (+6 more)
engine/runtime/: CMakeLists.txt
engine/runtime/src/: dependency_injection.ixx  engine.cpp  engine.ixx  engine_c.cpp  entt.ixx  index.ixx  intrusive_containers.ixx  runtime.ixx  scene.cpp  scene.ixx  scene_c.cpp  script_runtime.ixx  sdl_runtime.ixx
engine/scripting/: CMakeLists.txt
engine/scripting/src/: dotnet.ixx  index.ixx  scripting.cpp  scripting.ixx
engine/src/: CMakeLists.txt
engine/src/runtime/: CMakeLists.txt
game/: CMakeLists.txt
game/script/RetroEngine.Game.Sample/: GameRunner.cs  RetroEngine.Game.Sample.csproj  SimpleFlipbook.cs
game/src/: main.cpp
(+1714 files in other folders)
