[project]
name = "retro-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Retro & Chill", email = "35567462+retroandchill@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    'pre-commit>=4.5.1',
    'autopep8>=2.3.2',
    'pathspec>=0.12.1',
    'pqdm>=0.2.0'
]

[tool.uv.workspace]
members = [
    "tools/autotile-converter",
]
