[project]
name = "retro-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Retro & Chill", email = "35567462+retroandchill@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    'pre-commit>=4.5.1',
    'autopep8>=2.3.2',
    'pathspec>=1.0.4',
    'pqdm>=0.2.0',
    "datamodel-code-generator>=0.58.0",
]

[tool.uv.workspace]
members = [
    "engine/src/programs/python/autotile-converter",
    "engine/src/programs/python/shader-embedder",
    "engine/src/programs/python/sdl3pp-module-builder",
]
