# @file CMakeLists.txt
#
# @copyright Copyright (c) 2026 Retro & Chill. All rights reserved.
# Licensed under the MIT License. See LICENSE file in the project root for full license information.
add_subdirectory(core)
add_subdirectory(logging)
add_subdirectory(runtime)
add_subdirectory(renderer)
add_subdirectory(scripting)
